[package]
name = "rid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis =  { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }
rbson = "2.0"
lazy_static = "1.4.0"