[package]
name = "rid"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Rust version of the Twitter snowflake algorithm."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis =  { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }
rbson = "2.0"
hostname = "0.3.1"
async-std = "1.12.0"