[package]
name = "rust-distributed-id"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["zxgangandy <zxgangandy@gmail.com>"]
description = "Rust version of the Twitter snowflake algorithm."
repository = "https://github.com/zxgangandy/rid.git"
documentation = "https://docs.rs/rust-distributed-id"
readme = "README.md"
keywords = [ "snowflake", "distributed-id"]
categories = ["development-tools", "data-structures", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis =  { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4", features = ["serde"] }
rbson = "2.0"
hostname = "0.3.1"
async-std = "1.12.0"